tttr Signed-off-by: eagleduk <33012310+eagleduk@users.noreply.github.com>

--- a/ISS_Simulator/Simulator.properties
+++ b/ISS_Simulator/Simulator.properties
@@ -29,5 +29,11 @@ GeneratorEngine.Count=4
 ShipBolier.Count=2
 
 ##########################################################################
+#			File Export Default Folder
+##########################################################################
+
+File.Export=export
+
+##########################################################################
 #
 ##########################################################################
