hh Signed-off-by: eagleduk <33012310+eagleduk@users.noreply.github.com>

--- a/ISS_Simulator/Simulator.properties
+++ b/ISS_Simulator/Simulator.properties
@@ -8,7 +8,7 @@ Sim.Version=v0.1
 #			Redis information
 ##########################################################################
 
-Redis.host=127.000.000.001
+Redis.host=127.000.111.001
 Redis.port=6379
 Redis.timeout=1000
 Redis.Runtime=2
@@ -23,7 +23,7 @@ ValueTag.LoadRoot=data
 #			Engine Load information
 ##########################################################################
 
-Engine.Load=100%,75%,50%,25%
+Engine.Load=100%,75%,50%,25%,0%
 MainEngine.Count=2
 GeneratorEngine.Count=4
 ShipBolier.Count=2
