ttest Signed-off-by: eagleduk <33012310+eagleduk@users.noreply.github.com>

--- a/ISS_Simulator/conf/Simulator.properties
+++ b/ISS_Simulator/conf/Simulator.properties
@@ -2,7 +2,7 @@
 #			Simulator Version
 ##########################################################################
 
-Sim.Version=v0.1
+Sim.Version=v0.2
 
 ##########################################################################
 #			Redis information
@@ -23,7 +23,7 @@ ValueTag.LoadRoot=data
 #			Engine Load information
 ##########################################################################
 
-Engine.Load=100%,75%,50%,25%,0%
+Engine.Load=100%,75%,50%,25%
 MainEngine.Count=2
 GeneratorEngine.Count=4
 ShipBolier.Count=2
@@ -33,6 +33,12 @@ ShipBolier.Count=2
 ##########################################################################
 
 File.Export=export
+
+##########################################################################
+#			Config File Default Folder
+##########################################################################
+
+Config.Folder=conf
 
 ##########################################################################
 #
