--- a/ISS_Simulator/bin/.gitignore
+++ b/ISS_Simulator/bin/.gitignore
@@ -1,1 +1,7 @@
 /com/
+/commons-pool2-2.0.jar
+/jedis-2.9.0.jar
+/poi-3.13.jar
+/poi-ooxml-3.13.jar
+/poi-ooxml-schemas-3.13.jar
+/xmlbeans-2.6.0.jar
