Menu Bar Add Signed-off-by: eagleduk <33012310+eagleduk@users.noreply.github.com>

--- a/ISS_Simulator/conf/Simulator.properties
+++ b/ISS_Simulator/conf/Simulator.properties
@@ -28,6 +28,16 @@ MainEngine.Count=2
 GeneratorEngine.Count=4
 ShipBolier.Count=2
 
+MainEngine.defaultCount=2
+MainEngine.MaxCount=4
+
+GeneratorEngine.defaultCount=4
+GeneratorEngine.MaxCount=4
+
+ShipBolier.defaultCount=2
+ShipBolier.MaxCount=4
+
+
 ##########################################################################
 #			File Export Default Folder
 ##########################################################################
